# ToolDAQApplication

./: .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  thirdparty.cmake
cmake/: boost.cmake  sumo.cmake  zmq.cmake
src/: main.cpp
